--- a/discord/src/common/font.css
+++ b/discord/src/common/font.css
@@ -1,30 +1,30 @@
  @font-face {
-    font-family:'discord' ;
+    font-family:'discord1' ;
     src: url('../assets/fonts/discord1.woff2');
  }
 
  @font-face {
-    font-family:'discord' ;
+    font-family:'discord2' ;
     src: url('../assets/fonts/discord2.woff2');
  }
 
  @font-face {
-    font-family:'discord' ;
+    font-family:'discord3' ;
     src: url('../assets/fonts/discord3.woff2');
  }
 
  @font-face {
-    font-family:'discord' ;
+    font-family:'discord4' ;
     src: url('../assets/fonts/discord4.woff2');
  }
 
  @font-face {
-    font-family:'discord' ;
+    font-family:'discord5' ;
     src: url('../assets/fonts/discord5.woff2');
  }
 
  @font-face {
-    font-family:'discord' ;
+    font-family:'discord6' ;
     src: url('../assets/fonts/discord6.woff2');
  }
 
